--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "python.formatting.blackPath": "/Users/julesbressan/opt/anaconda3/envs/enea_task/bin/black"
 }
